# QABA

./: .gitignore  LICENSE  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  env.example  package-lock.json
Backend/: Dockerfile  (+1 more)
Backend/qaba-api/: .env.example  .gitignore  README.md  manage.py  pyproject.toml  pytest.ini  requirements.txt
Backend/qaba-api/apps/blogs/: admin.py  models.py  urls.py  views.py
Backend/qaba-api/apps/blogs/tests/: conftest.py  test_views.py
Backend/qaba-api/apps/jobs/: admin.py  models.py  serializers.py  urls.py  views.py
Backend/qaba-api/apps/jobs/migrations/: 0001_initial.py  0002_jobform.py  0003_alter_job_options_alter_jobform_options_job_status.py  0004_jobform_linkedin_url_jobform_location_and_more.py  0005_job_slug.py  0006_job_type.py  0007_alter_jobform_cv.py
Backend/qaba-api/apps/jobs/tests/: conftest.py  test_views.py
Backend/qaba-api/apps/properties/: admin.py  models.py  serializers.py  urls.py  views.py
Backend/qaba-api/apps/properties/migrations/: 0002_initial.py  0003_improve_features_amenities.py  0007_add_property_video_model.py  0011_amenity_remove_property_amenities_property_amenities.py  0013_remove_amenity_description.py  0014_favorite.py  0015_property_agent_commission_property_lister_type_and_more.py  0016_property_is_verified.py  0017_alter_property_listed_by.py  0019_property_city_property_state.py  0021_alter_property_agent_commission_and_more.py  0022_property_caution_fee_property_service_charge.py  0023_property_legal_fee.py  0024_property_slug.py  0025_alter_property_id.py  0026_property_property_id.py  0027_generate_property_ids.py  0028_add_property_id_unique_constraint.py  0029_property_owner.py
Backend/qaba-api/apps/properties/tests/: conftest.py  test_views.py
Backend/qaba-api/apps/transactions/: admin.py  models.py  serializers.py  urls.py  views.py
Backend/qaba-api/apps/transactions/migrations/: 0001_initial.py  0002_transaction_payment_type_transaction_property.py  0003_alter_transaction_payment_type_and_more.py  0004_alter_transaction_options_and_more.py  0005_property_fk_uuid.py
Backend/qaba-api/apps/transactions/tests/: conftest.py  test_views.py
Backend/qaba-api/apps/users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
Backend/qaba-api/apps/users/migrations/: 0002_alter_agentprofile_profile_photo_and_more.py  0004_alter_user_managers_alter_user_email_and_more.py  0005_remove_user_username.py  0006_rename_specializations_agentprofile__state_and_more.py  0007_rename__state_agentprofile_state_and_more.py  0008_remove_agentprofile_phone_number_and_more.py  0009_notification_metadata_notification_notification_type_and_more.py  0010_alter_user_user_type_landlordprofile.py  0011_propertysurveymeeting.py  0012_remove_user_email_verification_token_otp.py  0013_remove_user_password_reset_token.py  0014_add_adminprofile_referral.py
Backend/qaba-api/apps/users/tests/: conftest.py  test_auth.py  test_contact.py  test_notifications.py  test_profiles.py  test_referral.py  test_survey_meetings.py  test_users.py
Backend/qaba-api/core/: fields.py  urls.py  views.py
Backend/qaba-api/core/settings/: base.py  development.py  production.py  test.py
Backend/qaba-api/core/tests/: test_media_compression.py
Backend/qaba-api/core/utils/: exception_handler.py  flutterwave.py  media_compression.py  microsoft_graph_email.py  response.py  send_email.py  token.py
Backend/qaba-api/docs/: ARCHITECTURE.md
Backend/qaba-api/requirements/: base.txt  development.txt  production.txt
Backend/qaba-api/src/: db.sqlite3  manage.py
Backend/qaba-api/src/apps/blogs/: serializers.py
Backend/qaba-api/src/apps/blogs/migrations/: 0001_initial.py
Backend/qaba-api/src/apps/properties/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
Backend/qaba-api/src/apps/properties/migrations/: 0001_initial.py  0002_rename_title_property_property_name_and_more.py  0003_remove_property_features_amenities_and_more.py  0004_remove_features_amenities.py  0008_remove_property_price_remove_property_status_and_more.py  0009_alter_propertyimage_image_alter_propertyvideo_video.py  0010_property_amenities.py  0012_alter_property_options.py  0018_propertyreview.py  0020_remove_property_lister_type.py
Backend/qaba-api/src/apps/transactions/: admin.py  models.py  serializers.py  urls.py  views.py
Backend/qaba-api/src/apps/users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
Backend/qaba-api/src/apps/users/migrations/: 0001_initial.py  0002_auto_20241228_2214.py  0003_auto_20241228_2231.py  0003_notification.py  0004_auto_20241228_2253.py  0005_auto_20241231_0301.py  0006_alter_user_email.py  0007_user_password_reset_token.py  0008_remove_user_password_reset_token.py  0009_user_password_reset_token.py
Backend/qaba-api/src/apps/users/utils/: token.py
Backend/qaba-api/src/core/: __init__.py  urls.py
Backend/qaba-api/src/core/settings/: __init__.py  base.py  development.py  production.py
Backend/qaba-api/src/core/utils/: email_backend.py  exception_handler.py  flutterwave.py  permissions.py  response.py  send_email.py  token.py
Backend/qaba-api/src/templates/admin/: property_details.html
Backend/qaba-api/src/templates/email/: admin_property_review_notification.html  offline_payment_notification.html  property_review_notification.html  survey_meeting_admin.html  survey_meeting_client.html  survey_meeting_status_update.html  verification.html
Backend/qaba-api/src/tests/users/: serializers_test.py  views_test.py
Backend/qaba-api/templates/admin/: action_buttons.html
Backend/qaba-api/templates/email/: admin_property_review_notification.html  base.html  contact_confirmation.html  contact_form.html  offline_payment_notification.html  owner_property_review_notification.html  password_reset.html  password_reset_otp.html  survey_meeting_admin.html  survey_meeting_client.html  survey_meeting_status_update.html  verification.html
Backend/qaba-api/tests/users/: serializers_test.py
(+209 files in other folders)
