[project]
name = "qaba-api"
version = "1.0.0"
description = "QABA Real Estate Platform Backend API"
requires-python = ">=3.11"
dependencies = [
    "asgiref>=3.8.1",
    "certifi>=2025.1.31",
    "cffi>=2.0.0",
    "charset-normalizer>=3.4.1",
    "click>=8.1.8",
    "cloudinary>=1.42.2",
    "cryptography>=46.0.1",
    "django>=5.1.6",
    "django-cloudinary-storage>=0.3.0",
    "django-cors-headers>=4.7.0",
    "django-extra-fields>=3.0.2",
    "django-filter>=25.1",
    "django-formtools>=2.5.1",
    "django-otp>=1.6.1",
    "django-phonenumber-field>=8.1.0",
    "django-two-factor-auth>=1.18.1",
    "djangorestframework>=3.15.2",
    "djangorestframework-simplejwt>=5.3.1",
    "drf-nested-routers>=0.94.1",
    "drf-spectacular>=0.28.0",
    "google-auth>=2.41.1",
    "gunicorn>=23.0.0",
    "idna>=3.10",
    "inflection>=0.5.1",
    "jsonschema>=4.23.0",
    "msal>=1.33.0",
    "pillow>=11.0.0",
    "psycopg2>=2.9.10",
    "pycparser>=2.23",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.0.1",
    "pytz>=2024.2",
    "pyyaml>=6.0.2",
    "qrcode>=8.2",
    "requests>=2.32.3",
    "sqlparse>=0.5.3",
    "typing-extensions>=4.12.2",
    "uritemplate>=4.1.1",
    "urllib3>=2.3.0",
    "whitenoise>=6.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-django>=4.8.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.8.0",
    "django-stubs>=4.2.0",
    "djangorestframework-stubs>=3.14.0",
    "ruff>=0.8.0",
    "django-debug-toolbar>=3.2.1",
    "django-extensions>=3.1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "core"]

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [
    ".git",
    "__pycache__",
    "migrations",
    ".venv",
    "venv",
    "staticfiles",
    "media",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["apps", "core"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.11"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
ignore_missing_imports = true
exclude = ["migrations", "staticfiles", "media"]

[tool.django-stubs]
django_settings_module = "core.settings.development"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings.development"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "-v --tb=short"
